# MCP3914

./: CMakeLists.txt  LICENSE.md  README.md
include/: mcp3914.h  spi.h
src/: mcp3914.cpp  spi.cpp
